update map fetch repo call to return aggregate stats for map
